<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".length_activity"
    android:background="@color/green"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_50sdp"
                android:text="TEMPERATURE"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:background="@drawable/headlines"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_20sdp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@color/dark_green"
                android:padding="@dimen/_5sdp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/centar"
                    android:orientation="vertical"
                    android:background="@color/dull_yellow">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/celcius"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/dark_green"
                        android:textSize="@dimen/_20sdp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="enter value"
                        android:id="@+id/ctof"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:textStyle="bold"
                        android:inputType="number"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/equals_btn">

                        <ImageView
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:src="@drawable/downward_arrow"
                            android:id="@+id/cbtn"
                            />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fahrenheit"
                        android:textStyle="bold"
                        android:textColor="@color/dark_green"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center"
                        android:textSize="@dimen/_20sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="for result"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:id="@+id/ffromc"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:textSize="@dimen/_18sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:gravity="center"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:id="@+id/centar"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/dull_yellow"
                    android:layout_toRightOf="@id/centar">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fahrenheit"
                        android:textStyle="bold"
                        android:textColor="@color/dark_green"
                        android:gravity="center"
                        android:textSize="@dimen/_20sdp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="enter value"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:gravity="center"
                        android:id="@+id/ftoc"
                        android:textSize="@dimen/_18sdp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/equals_btn">

                        <ImageView
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:src="@drawable/downward_arrow"
                            android:id="@+id/fbtn"
                            />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/celcius"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center"
                        android:textColor="@color/dark_green"
                        android:textSize="@dimen/_20sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="for result"
                        android:textStyle="bold"
                        android:id="@+id/cfromf"
                        android:textColor="@color/red"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:textSize="@dimen/_18sdp"
                        android:gravity="center"/>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@color/dark_green"
                android:padding="@dimen/_5sdp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/centar1"
                    android:orientation="vertical"
                    android:background="@color/dull_yellow">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kelvin"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/dark_green"
                        android:textSize="@dimen/_20sdp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="enter value"
                        android:id="@+id/ktoc"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:textStyle="bold"
                        android:inputType="number"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/equals_btn">

                        <ImageView
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:src="@drawable/downward_arrow"
                            android:id="@+id/kcbtn"
                            />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/celcius"
                        android:textStyle="bold"
                        android:textColor="@color/dark_green"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center"
                        android:textSize="@dimen/_20sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="for result"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:id="@+id/cfromk"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:textSize="@dimen/_18sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:gravity="center"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:id="@+id/centar1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/dull_yellow"
                    android:layout_toRightOf="@id/centar1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kelvin"
                        android:textStyle="bold"
                        android:textColor="@color/dark_green"
                        android:gravity="center"
                        android:textSize="@dimen/_20sdp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="enter value"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:gravity="center"
                        android:id="@+id/ktof"
                        android:textSize="@dimen/_18sdp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/equals_btn">

                        <ImageView
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:src="@drawable/downward_arrow"
                            android:id="@+id/kfbtn"
                            />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fahrenheit"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center"
                        android:textColor="@color/dark_green"
                        android:textSize="@dimen/_20sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="for result"
                        android:textStyle="bold"
                        android:id="@+id/ffromk"
                        android:textColor="@color/red"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:textSize="@dimen/_18sdp"
                        android:gravity="center"/>
                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>